--- a/src/Components/MetaMaskPage.css
+++ b/src/Components/MetaMaskPage.css
@@ -53,7 +53,8 @@ body {
     opacity: 0.7;
     bottom: 0;
     right: 0;
-    transform: translate(-15%, -100%);
+    height: 40px;
+    transform: translate(-190%, -430%);
     position: fixed;
   }
   .NextButton{
@@ -69,7 +70,7 @@ body {
     border-radius: 40px;
     bottom: 0;
     right: 0;
-    transform: translate(-15%, -100%);
+    transform: translate(-200%, -580%);
     text-align: center;
     text-decoration: none;
     position: fixed;
