--- a/src/ViewHash.css
+++ b/src/ViewHash.css
@@ -16,7 +16,7 @@
   */
   .App-header {
     background-color: #121212;
-    min-height: 100vh;
+    min-height: 200vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,8 +35,19 @@
     opacity: 0.7;
     font-size: 45px;
     text-align:left;
-    position: fixed;
+    position: absolute;
     top: 140px;
+    left:90px;
+   
+
+  }
+
+  .App-header5 {
+    opacity: 0.7;
+    font-size: 45px;
+    text-align:left;
+    position: absolute;
+    top: 747px;
     left:90px;
    
 
@@ -52,7 +63,7 @@
     opacity: 0.7;
     font-size: 20px;
     text-align:left;
-    position: fixed;
+    position: absolute;
     left: 570px;
     font-weight: lighter ;
     top:150px;
@@ -62,20 +73,20 @@
     opacity: 0.7;
     font-size: 30px;
     text-align:left;
-    position: fixed;
+    position: absolute;
     left: 610px;
     font-weight: lighter ;
-    top:155px;
+    top:710px;
 
   }
   .hashed {
     opacity: 0.7;
     font-size: 17px;
     text-align:left;
-    position: fixed;
-    left: 619px;
+    position: absolute;
+    left:10px;
     font-weight: lighter ;
-    top:200px;
+    top:50px;
 
   }
   .square-container { 
@@ -89,7 +100,8 @@
     align-items: center;
     position: relative;
     flex-direction: column;
-    left:-10px;
+    left:-5px;
+    top:0px;
 
 }
 
@@ -99,14 +111,16 @@
         border-radius: 7px;
         border:none;
         padding:5px; 
-        left:750px;
-        top:270px;
+        left:150px;
+        top:10px;
         font-size: 13px;
-        position:fixed;    
+        position:absolute;    
   }
-      .hash{
-        font-size:13px;
-        top:20px;
+      .hashh{
+        font-size:15px;
+        top:300px;
+        radius:10px;        
+        border:none;
       }
 .note{
     
@@ -115,8 +129,8 @@
     align-items: center;
     position: relative;
     flex-direction: column;
-    left:211px;
-    top:120px;
+    left:220px;
+    top:420px;
     font-size:18px;
     font-weight:lighter;
     color:#d0312d;
@@ -138,11 +152,14 @@
   .App-header4 {
   
     font-size: 15px;
-    position: relative;
-    top: 170px;
-    left: 135px;
+    position: absolute;
+    top: 450px;
+    left: 720px;
     font-weight: lighter ;
    opacity :0.8;
+   color:#2b2b2b;
+   button-radius:10px;
+   border:none;
   }
   .buttons-container {
     left:100px;
@@ -173,11 +190,19 @@
     border-left: 0.2px solid white;
     opacity: 0.3;
     height: 330pt;
-    position: fixed;
+    position: absolute;
     top: 120px;
     left: 420px;
   }
   
+  .line2 {
+    border-left: 0.2px solid white;
+    opacity: 0.3;
+    height: 330pt;
+    position: absolute;
+    top: 725px;
+    left: 420px;
+  }
   .App-link {
     color: #61dafb;
   }
@@ -318,6 +343,133 @@
     transform: scale(0.09);
   }
   
+  .button6 {
+    padding: 10px 20px;
+    color: white;
+    opacity: 0.7;
+    background-color: transparent;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none; /* Remove focus outline */
+    position: absolute; /* Change position to absolute */
+    top: 647px; /* Adjust top position */
+    left: 130px; /* Adjust left position */
+    transform: translate(-50%, -50%); /* Center the button */
+    transition: top 0.3s /* Add transition effect */
+  }
+  
+  .button6:active,
+  .button6.highlighted {
+    color: #121212; /* Set text color to transparent */
+    background-color: white; /* Set background color to white */
+    opacity: 0.2;
+    border: none; /* Remove border */
+    border-radius: 50px; /* Set border-radius for a capsule shape */
+  
+  }
+  
+  .button7 {
+    padding: 10px 20px;
+    color: white;
+    opacity: 0.7;
+    background-color: transparent;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none; /* Remove focus outline */
+    position: absolute; /* Change position to absolute */
+    top: 647px; /* Adjust top position */
+    left:270px; /* Adjust left position */
+    transform: translate(-50%, -50%); /* Center the button */
+    transition: top 0.3s /* Add transition effect */
+  }
+  
+  .button7:active,
+  .button7.highlighted {
+    color: #121212; /* Set text color to transparent */
+    background-color: white; /* Set background color to white */
+    opacity: 0.2;
+    border: none; /* Remove border */
+    border-radius: 50px; /* Set border-radius for a capsule shape */
+  
+  }
+  /*  top: 40%; /* Adjust top position left: 40%; /* Adjust left position */
+  /*if i want to make it move up when clicked*/
+  
+  
+  .button8 {
+    padding: 10px 20px;
+    color: white;
+    opacity: 0.7;
+    background-color: transparent;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none; /* Remove focus outline */
+    position: absolute; /* Change position to absolute */
+    top: 647px; /* Adjust top position */
+    left:400px; /* Adjust left position */
+    transform: translate(-50%, -50%); /* Center the button */
+    transition: top 0.3s /* Add transition effect */
+  }
+  
+  .button8:active,
+  .button8.highlighted {
+    color: #121212; /* Set text color to transparent */
+    background-color: white; /* Set background color to white */
+    opacity: 0.2;
+    border: none; /* Remove border */
+    border-radius: 50px; /* Set border-radius for a capsule shape */
+  
+  }
+  
+  
+  .button9 {
+    padding: 10px 20px;
+    color: white;
+    opacity: 0.7;
+    background-color: transparent;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none; /* Remove focus outline */
+    position: absolute; /* Change position to absolute */
+    top: 647px; /* Adjust top position */
+    left:520px; /* Adjust left position */
+    transform: translate(-50%, -50%); /* Center the button */
+    transition: top 0.3s /* Add transition effect */
+  }
+  
+  .button9:active,
+  .button9.highlighted {
+    color: #121212; /* Set text color to transparent */
+    background-color: white; /* Set background color to white */
+    opacity: 0.2;
+    border: none; /* Remove border */
+    border-radius: 50px; /* Set border-radius for a capsule shape */
+  
+  }
+  
+  .button10 {
+    padding: 5px 16px; /* Adjust padding to make the button smaller */
+    color: white;
+    opacity: 0.7;
+    background-color: transparent;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px; /* Adjust font size to make the button text smaller */
+    cursor: pointer;
+    outline: none; /* Remove focus outline */
+    position: absolute; /* Change position to absolute */
+    top: 407px; /* Adjust top position */
+    right: -180px; /* Adjust right position */
+    transform: scale(0.09);
+  }
   
   
   .rounded-rectangle {
